--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,8 +31,7 @@ jobs:
           dotnet-version: '7.0.x'
 
       # Runs a set of commands using the runners shell
-      - name: Run tests
-        uses: actions/cryptic-wizard/run-specflow-tests@v1.3.3
+      - uses: actions/cryptic-wizard/run-specflow-tests@v1.3.3
         with:
           test-assembly-path: DemoBDD\bin\Release\net7.0
           test-assembly-dll: DemoBDD.dll
