--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           dotnet-version: '7.0.x'
 
+      - run: dotnet build
+      - name: Ensure brosers are installed
+        run: pwsh bin/Release/net7.0/playwright.ps1 install --with-deps
+
       # Runs a set of commands using the runners shell
       - uses: cryptic-wizard/run-specflow-tests@v1.3.3
         with:
