--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,7 +32,7 @@ jobs:
 
       - run: dotnet build
       - name: Ensure brosers are installed
-        run: pwsh bin/Release/net7.0/playwright.ps1 install --with-deps
+        run: pwsh bin/Debug/net7.0/playwright.ps1 install --with-deps
 
       # Runs a set of commands using the runners shell
       - uses: cryptic-wizard/run-specflow-tests@v1.3.3
