--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,7 +37,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - uses: cryptic-wizard/run-specflow-tests@v1.3.3
         with:
-          test-assembly-path: DemoBDD\bin\Debug\net7.0
+          test-assembly-path: bin\Release\net7.0
           test-assembly-dll: DemoBDD.dll
           output-html: TestResults.html
           build-verbosity: normal
